# docker-credential-chamber

./: .bumpversion.cfg  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  tox.ini
docker_credential_chamber/: __init__.py  cli.py  exception_handler.py  version.py
docs/: Makefile  cli.rst  conf.py  docker_credential_chamber.rst  index.rst  installation.rst  make.bat  modules.rst  readme.rst
make/: dist.mk  docker.mk  test.mk
make.include/: common.mk  docker.mk  docs.mk  lint.mk  publish.mk  release.mk  requirements.mk  test.mk  version.mk
tests/: conftest.py  test_cli.py  test_docker.py  test_encoder.py
tests/data/: creds.json
