[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "docker_credential_chamber"
authors = [{name = "Matt Krueger", email = "mkrueger@rstms.net"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

dependencies = [
    "click"
]

[project.optional-dependencies]
dev = [
    "black",
    "coverage",
    "bump2version",
    "isort",
    "flake8",
    "pytest",
    "tox"
]

docs = [
    "m2r2",
    "sphinx",
    "sphinx-click",
    "sphinx-rtd-theme"
  ]

[tool.black]
line-length = 80

[project.urls]
Home = "https://github.com/rstms/docker-credential-chamber"

[project.scripts]
docker-credential-chamber = "docker_credential_chamber:cli"
