[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "docker-credential-chamber"
requires-python = ">=3.10"
authors = [{name = "Matt Krueger", email = "mkrueger@rstms.net"}]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
keywords = ['docker', 'credential', 'helper', 'chamber']
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python"
]
dynamic = ["version", "description"]

dependencies = [
    "click"
]

[tool.flit.module]
name = "docker_credential_chamber"

[project.optional-dependencies]
dev = [
    "black",
    "coverage",
    "bump2version",
    "isort",
    "flake8",
    "flake8-length",
    "pytest",
    "pytest-datadir",
    "python-box",
    "tox",
    "pdbpp",
    "toml"
]

docs = [
    "m2r2",
    "sphinx",
    "sphinx-click",
    "sphinx-rtd-theme"
  ]

[tool.black]
line-length = 80

[tool.pytest.ini_options]
addopts = '-x'
log_auto_indent = true
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(levelname)s %(message)s"

log_file = "pytest.log"
log_file_format = "%(levelname)s %(name)s.%(funcName)s %(message)s"
log_file_level = "DEBUG"

[project.urls]
Home = "https://github.com/rstms/docker-credential-chamber"

[project.scripts]
docker-credential-chamber = "docker_credential_chamber:cli"
